--- a/pfs-ui/src/main/resources/messages.properties
+++ b/pfs-ui/src/main/resources/messages.properties
@@ -1,3 +1,15 @@
 menu.links.account=Accounts
 menu.links.operation=Operations
 menu.links.statistic=Statistic
+account.button.add=Add new account
+addaccount.title=New account
+account.type.debitcard=Debit Card
+account.type.creditcard=Credit Card
+account.type.credit=Credit
+account.type.cash=Cash
+account.type.deposit=Deposit
+addaccount.choosetype=Choose type of account
+addaccount.name=Name of account
+addaccount.amount=Amount
+button.create=Create
+
