--- a/pfs-ui/src/main/resources/messages_ru.properties
+++ b/pfs-ui/src/main/resources/messages_ru.properties
@@ -1,3 +1,14 @@
+account.type.debitcard=\u0414\u0435\u0431\u0435\u0442\u043E\u0432\u0430\u044F \u043A\u0430\u0440\u0442\u0430
 menu.links.account=\u0421\u0447\u0435\u0442\u0430
 menu.links.operation=\u041E\u043F\u0435\u0440\u0430\u0446\u0438\u0438
 menu.links.statistic=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043A\u0430
+account.button.add=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u0441\u0447\u0451\u0442
+addaccount.title=\u041D\u043E\u0432\u044B\u0439 \u0441\u0447\u0451\u0442
+account.type.creditcard=\u041A\u0440\u0435\u0434\u0438\u0442\u043D\u0430\u044F \u043A\u0430\u0440\u0442\u0430
+account.type.credit=\u041A\u0440\u0435\u0434\u0438\u0442
+account.type.cash=\u041D\u0430\u043B\u0438\u0447\u043D\u044B\u0435
+account.type.deposit=\u0412\u043A\u043B\u0430\u0434
+addaccount.choosetype=\u0412\u044B\u0431\u0435\u0440\u0435\u0442\u0438 \u0442\u0438\u043F \u0441\u0447\u0451\u0442\u0430
+addaccount.name=\u0418\u043C\u044F \u0441\u0447\u0451\u0442\u0430
+addaccount.amount=\u0421\u0443\u043C\u043C\u0430
+button.create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C
